<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OCR Server</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="server_status">Server Status</string>
    <string name="server_running">Running</string>
    <string name="server_stopped">Stopped</string>
    <string name="server_address">Server Address</string>
    <string name="no_network">No network connection</string>
    <string name="websocket_connections">WebSocket Connections</string>
    <string name="request_logs">Request Logs</string>
    <string name="notification_channel_name">OCR Server</string>
    <string name="notification_channel_description">OCR Server notifications</string>
    <string name="notification_title">OCR Server is running</string>
    <string name="notification_text">Server address: %s</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="ocr_language">OCR Language</string>
    <string name="language_auto">Auto Detect</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian (Русский)</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_korean">Korean</string>
    <string name="language_devanagari">Devanagari</string>
    <string name="downloading_language_data">Downloading language data…</string>
</resources>

